--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -13,6 +13,6 @@
         <area alt="Задание 3" title="3. Навигация между файлами" href="lab1_3/doc.html" coords="127,505,634,720" shape="rect">
         <area alt="Задание 4" title="4. Изображения" href="lab1_4.html" coords="1267,720,758,505" shape="rect">
     </map>
-    <p>Моя карта-изображение</a>.
+    <p>Моя карта-изображение</p>.
 </body>
 </html>
