--- a/lab1/lab1_3/doc4.html
+++ b/lab1/lab1_3/doc4.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Изображение в качестве ссылки</title>
+    <meta charset="UTF-8">
+    <title>Изображение в качестве ссылки</title>
+    <style>
+        a img {
+            border: none; 
+        }
+    </style>
 </head>
 <body>
+
 <h1>Изображение в качестве ссылки</h1>
-<p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в 
-  этом случае надо поместить между тегами <code>&lt;a&gt;</code> 
-  и <code>&lt;/a&gt;</code>, как показано в примере&nbsp;1.</p>
-<p>Пример 1. Создание рисунка-ссылки</p>
-<pre><code>&lt;!DOCTYPE html&gt;
-&lt;html lang=&quot;ru&quot;&gt;
+<p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в этом случае надо поместить между тегами <code>&lt;a&gt;</code> и <code>&lt;/a&gt;</code>, как показано в примере 1.</p>
+
+<h2>Пример 1. Создание рисунка-ссылки</h2>
+<pre>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="ru"&gt;
  &lt;head&gt;
-  &lt;meta charset=&quot;UTF-8&quot;&gt;
+  &lt;meta charset="UTF-8"&gt;
   &lt;title&gt;Ссылка&lt;/title&gt;
  &lt;/head&gt;
  &lt;body&gt; 
-   &lt;p&gt;&lt;a href=&quot;sample.html&quot;&gt;&lt;img src=&quot;images/sample.gif&quot; width=&quot;50&quot; 
-   height=&quot;50&quot; alt=&quot;Пример&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+   &lt;p&gt;&lt;a href="sample.html"&gt;&lt;img src="images/sample.gif" width="50" height="50" alt="Пример"&gt;&lt;/a&gt;&lt;/p&gt;
  &lt;/body&gt; 
-&lt;/html&gt;</code></pre>
+&lt;/html&gt;
+</pre>
 
-  <p>Атрибут <code>href </code> тега <code>&lt;a&gt;</code> 
-    задает путь к документу, на который указывает ссылка, а <code>src</code> 
-    тега <code>&lt;img&gt;</code> &#8212; путь к графическому файлу. 
-  
-  <p>Вокруг изображения-ссылки автоматически добавляется рамка толщиной один пиксел 
-  и цветом, совпадающим с цветом текстовых ссылок. 
+<p>В этом примере атрибут <code>href</code> тега <code>&lt;a&gt;</code> задает путь к документу, на который указывает ссылка, а атрибут <code>src</code> тега <code>&lt;img&gt;</code> — путь к графическому файлу.</p>
 
-<p>Чтобы убрать рамку, следует для тега <code>&lt;img&gt;</code> использовать
-  стилевое свойство <code>border</code> (пример&nbsp;2).</p>
-<p>Пример 2. Удаление рамки вокруг изображения</p>
-<pre><code>&lt;!DOCTYPE html&gt;
-&lt;html lang=&quot;ru&quot;&gt;
+<h2>Рамка вокруг изображения-ссылки</h2>
+<p>Вокруг изображения-ссылки автоматически добавляется рамка толщиной один пиксел и цветом, совпадающим с цветом текстовых ссылок. Чтобы убрать рамку, следует использовать стилевое свойство <code>border</code>, как показано в примере 2.</p>
+
+<h2>Пример 2. Удаление рамки вокруг изображения</h2>
+<pre>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="ru"&gt;
  &lt;head&gt;
-  &lt;meta charset=&quot;UTF-8&quot;&gt;
+  &lt;meta charset="UTF-8"&gt;
   &lt;title&gt;Ссылка&lt;/title&gt;
   &lt;style&gt;
    a img {
@@ -44,10 +47,11 @@
   &lt;/style&gt;
  &lt;/head&gt;
  &lt;body&gt;
-   &lt;p&gt;&lt;a href=&quot;sample.html&quot;&gt;&lt;img src=&quot;images/sample.gif&quot; width=&quot;50&quot; 
-   height=&quot;50&quot; alt=&quot;Пример&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+   &lt;p&gt;&lt;a href="sample.html"&gt;&lt;img src="images/sample.gif" width="50" height="50" alt="Пример"&gt;&lt;/a&gt;&lt;/p&gt;
  &lt;/body&gt; 
-&lt;/html&gt;</code></pre>
+&lt;/html&gt;
+</pre>
+
 
 </body>
 </html>
