--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -12,38 +12,27 @@
         .menu {
             width: 200px;
             height: 450px;
-
             background: #fff;
-
             padding-top: 5px;
-
         }
 
         .menu ul {
-            list-style-image: url(src/pic/minus.gif);
+            list-style-image: url(pic/minus.gif);
             margin-bottom: 10px;
-            
             padding-left: 30px;
         }
-/* 
-        .menu li {
-            padding: 8px 0;
-        } */
+
+        /* .menu li {} */
 
         .menu li a {
             display: block;
-            color: #369;
-
+            color: #336699;
         }
 
-        .menu li a:hover {
-            color: #6092c4;
-        }
+        /* .menu li a:hover {} */
 
         .menu li ul {
-            list-style-image: url(src/pic/point.gif);
-
-
+            list-style-image: url(pic/point.gif);
         }
 
         .menu li li {
