--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -9,7 +9,7 @@
     <style>
         .menu {
             width: 200px;
-            background: #369;
+            background: #336699;
         }
 
         .menu ul {
@@ -23,18 +23,17 @@
         }
 
         .menu li a {
-            display: block;
-            padding: 10px;
-            text-transform: uppercase;
-            text-decoration-line: none;
-
-            background-color: white;
-            color: #679add;
+            display: block; 
+			padding: 10px; 
+			text-transform: uppercase; 
+			text-decoration: none; 
+			background-color: #ffffff; 
+			color: #336699; 
         }
 
         .menu li a:hover {
             background-color: #ffffcc;
-            color: #369;
+            color: #003378;
         }
     </style>
 </head>
