--- a/lab1/lab1_3.html
+++ b/lab1/lab1_3.html
@@ -19,11 +19,11 @@
 <h1>Ссылки и изображения</h1>
 <nav>
   <ul>
-    <li><a href="l3_1.html">Как сделать ссылку</a></li>
-    <li><a href="l3_2.html">Цвет ссылок</a></li>
-    <li><a href="l3_3.html">Атрибут target</a></li>
-    <li><a href="l3_4.html">Изображение в качестве ссылки</a></li>
-    <li><a href="l3_5.html">Ссылки внутри страницы</a></li>
+    <li><a href="doc1.html">Как сделать ссылку</a></li>
+    <li><a href="doc2.html">Цвет ссылок</a></li>
+    <li><a href="doc3.html">Атрибут target</a></li>
+    <li><a href="doc4.html">Изображение в качестве ссылки</a></li>
+    <li><a href="doc5.html">Ссылки внутри страницы</a></li>
   </ul>
 </nav>
 
