--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -10,7 +10,7 @@
     <map name="image-map">
         <area alt="Задание 1" title="1. Основные элементы HTML" href="lab1_1.html" coords="127,240,634,453" shape="rect">
         <area alt="Задание 2" title="2. Внутренняя навигация" href="lab1_2.html" coords="758,240,1267,453" shape="rect">
-        <area alt="Задание 3" title="3. Навигация между файлами" href="lab1_3/doc.html" coords="127,505,634,720" shape="rect">
+        <area alt="Задание 3" title="3. Навигация между файлами" href="lab1_3.html" coords="127,505,634,720" shape="rect">
         <area alt="Задание 4" title="4. Изображения" href="lab1_4.html" coords="1267,720,758,505" shape="rect">
     </map>
     <p>Моя карта-изображение</p>.
