--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -17,7 +17,7 @@
             <code>src</code>.</p>
 
         <figure>
-            <img src="images/redcat.jpg">
+            <img src="images/redcat.jpg" alt="Вставка изображения через img с атрибутом src" width="400" height="200">
             <figcaption>Red кот</figcaption>
         </figure>
 
@@ -28,7 +28,7 @@
             изображения (отключен показ изображений).</p>
 
         <figure>
-            <img src="images/mushroom" alt="mushroom.jpg">
+            <img src="images/mushroom.jpg" alt="mushroom.jpg">
             <figcaption>Тут должен быть гриб, но он сломан</figcaption>
         </figure>
 
