--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -17,7 +17,7 @@
             <code>src</code>.</p>
 
         <figure>
-            <img src="images/redcat.jpg" alt="Вставка изображения через img с атрибутом src" width="400" height="200">
+            <img src="images/redcat.jpg">
             <figcaption>Red кот</figcaption>
         </figure>
 
@@ -29,7 +29,7 @@
 
         <figure>
             <img src="images/mushroom.jpg" alt="mushroom.jpg">
-            <figcaption>Тут должен быть гриб, но он сломан</figcaption>
+            <figcaption>Мм грибок</figcaption>
         </figure>
 
         <h2>Размеры изображения</h2>
