--- a/lab7/lab7_1.html
+++ b/lab7/lab7_1.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Маркетинг в церквях и храмах для бизнеса | Bussines.ru</title>
+    <title>Маркетинг в социальных сетях для бизнеса | Bussines.ru</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -17,8 +17,8 @@
             <img src="1.svg" alt="Логотип">
         </div>
         <div id="contacts" style="float:right;">
-            <i class="fa fa-mobile fa-lg"></i> +7-944-228-1720 |
-            <i class="fa fa-envelope fa-lg"></i> info@batybusiness.ru
+            <i class="fa fa-mobile fa-lg"></i> +7-944-650-1720 |
+            <i class="fa fa-envelope fa-lg"></i> info@business.ru
             <i class="fa fa-facebook-square fa-2x" style="margin-left:10px; color: blue;"></i>
         </div>
         <div class="clearfix"></div>
@@ -51,10 +51,10 @@
         <div id="bannertext" style="position:absolute; top:10%; width:100%; text-align:center; color:white;">
             <div class="hidden-xs">
                 <h1>Мы предлагаем</h1>
-                <small style="color: white;">маркетинг в церквях и храмах для бизнеса</small>
+                <small style="color: white;">маркетинг в социальных сетях для бизнеса</small>
             </div>
             <div class="hidden-sm hidden-md hidden-lg">
-                <p class="lead">Мы предлагаем маркетинг в церквях и храмах для бизнеса</p>
+                <p class="lead">Мы предлагаем маркетинг в социальных сетях для бизнеса</p>
             </div>
             <a class="btn btn-danger btn-lg">Консультация</a>
         </div>
@@ -66,19 +66,19 @@
             <hr>
             <div class="col-md-4">
                 <img src="smartphone.svg" alt="Маркетинг Facebook">
-                <h3>Маркетинг храма Богородицы</h3>
-                <p>Храм Богородицы насчитывает более 1 миллиарда пользователей. Наша компания занимается изучением этой аудитории для продвижения Вашего бизнеса с помощью брендированных баннеров и рекламы. Мы сделаем всё возможное для процветания Вашей компании.</p>
+                <h3>Маркетинг Facebook</h3>
+                <p>Facebook насчитывает более 1 миллиарда пользователей. Наша компания занимается изучением этой аудитории для продвижения Вашего бизнеса с помощью брендированных страниц и рекламы. Мы сделаем всё возможное для процветания Вашей компании.</p>
             </div>
             <div class="col-md-4">
                 <img src="layers.svg" alt="Создание страниц">
                 <h3>Создание страниц</h3>
-                <p>Храм Богородицы насчитывает более 1 миллиарда пользователей. Наша компания занимается изучением этой аудитории для продвижения Вашего бизнеса с помощью брендированных баннеров и рекламы. Мы сделаем всё возможное для процветания Вашей компании.</p>
+                <p>Facebook насчитывает более 1 миллиарда пользователей. Наша компания занимается изучением этой аудитории для продвижения Вашего бизнеса с помощью брендированных страниц и рекламы. Мы сделаем всё возможное для процветания Вашей компании.</p>
             </div>
             <div class="col-md-4">
                 <img src="test.svg" alt="Управление рекламой">
                 <h3>Управление рекламой</h3>
 </div>
-                <p>Храм Богородицы насчитывает более 1 миллиарда пользователей. Наша компания занимается изучением этой аудитории для продвижения Вашего бизнеса с помощью брендированных баннеров и рекламы. Мы сделаем всё возможное для процветания Вашей компании.</p>
+                <p>Facebook насчитывает более 1 миллиарда пользователей. Наша компания занимается изучением этой аудитории для продвижения Вашего бизнеса с помощью брендированных страниц и рекламы. Мы сделаем всё возможное для процветания Вашей компании.</p>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
                     <img src="p.jpg" class="img-responsive" alt="Описание изображения">
                 </li>
                 <li class="list1_desc">
-                    <h3>Шаг 1: Привлечение клиентов</h3>
+                    <h3>Шаг 1: Название заголовка</h3>
                     <p>Мы используем инвестиционный метод, который заключается в комплексном анализе вашего бизнеса для его
                         продвижения. Мы начинаем с изучения преимуществ Вашей компании перед конкурентами. Составляет
                         несколько бизнес-планов на усмотрения заказчика и контролируем весь процесс.</p>
@@ -103,7 +103,7 @@
                     <img src="p2.webp" class="img-responsive" alt="Описание изображения">
                 </li>
                 <li class="list1_desc">
-                    <h3>Шаг 2: Анализ клиентоориентированного продукта</h3>
+                    <h3>Шаг 2: Название заголовка</h3>
                     <p>Мы используем инвестиционный метод, который заключается в комплексном анализе вашего бизнеса для его
                         продвижения. Мы начинаем с изучения преимуществ Вашей компании перед конкурентами. Составляет
                         несколько бизнес-планов на усмотрения заказчика и контролируем весь процесс.</p>
@@ -114,7 +114,7 @@
                     <img src="p3.jpg" class="img-responsive" alt="Описание изображения">
                 </li>
                 <li class="list1_desc">
-                    <h3>Шаг 3: Разработка продукта</h3>
+                    <h3>Шаг 3: Название заголовка</h3>
                     <p>Мы используем инвестиционный метод, который заключается в комплексном анализе вашего бизнеса для его
                         продвижения. Мы начинаем с изучения преимуществ Вашей компании перед конкурентами. Составляет
                         несколько бизнес-планов на усмотрения заказчика и контролируем весь процесс.</p>
@@ -125,7 +125,7 @@
                     <img src="p4.webp" class="img-responsive" alt="Описание изображения">
                 </li>
                 <li class="list1_desc">
-                    <h3>Шаг 4: Активная продажа</h3>
+                    <h3>Шаг 4: Название заголовка</h3>
                     <p>Мы используем инвестиционный метод, который заключается в комплексном анализе вашего бизнеса для его
                         продвижения. Мы начинаем с изучения преимуществ Вашей компании перед конкурентами. Составляет
                         несколько бизнес-планов на усмотрения заказчика и контролируем весь процесс.</p>
@@ -140,7 +140,7 @@
             <hr>
             <ul class="project-list">
                 <li class="project-list-desc">
-                    <h3>"Храмий"</h3>
+                    <h3>Название фирмы</h3>
                 </li>
                 <li class="project-list-img">
                     <img src="f.png" class="img-responsive" alt="Название фирмы">
@@ -148,7 +148,7 @@
             </ul>
             <ul class="project-list">
                 <li class="project-list-desc">
-                    <h3>"Babylony"</h3>
+                    <h3>Название фирмы 2</h3>
                 </li>
                 <li class="project-list-img">
                     <img src="f2.png" class="img-responsive" alt="Название фирмы 2">
@@ -156,7 +156,7 @@
             </ul>
             <ul class="project-list">
                 <li class="project-list-desc">
-                    <h3>"SWAG"</h3>
+                    <h3>Название фирмы 3</h3>
                 </li>
                 <li class="project-list-img">
                     <img src="f3.png" class="img-responsive" alt="Название фирмы 3">
